Probably temp fix to max-height on ios

--- a/src/sass/_timeline.sass
+++ b/src/sass/_timeline.sass
@@ -6,6 +6,7 @@
 
 	color: $text
 	height: 100%
+	max-height: -webkit-fill-available
 	padding: 0 5px
 	box-sizing: border-box
 	display: flex
